Switched inputobject from "json with nested json_string" to true json for |creategraphjson. Added savedsearches as example of the new inputformat for |creategraphjson. Adapted demo tbd. Changed license to apache 2.

--- a/graphee/default/savedsearches.conf
+++ b/graphee/default/savedsearches.conf
@@ -1,4 +1,4 @@
-[Transform_FirewallEventsJson_to_NodeAndRelList]
+[Transform_FirewallEventsJson_to_NodeAndRelList_02]
 action.email.show_password = 1
 action.email.useNSSubject = 1
 action.webhook.enable_allowlist = 0
@@ -10,7 +10,7 @@ display.page.search.tab = statistics
 display.visualizations.show = 0
 request.ui_dispatch_app = graphee
 request.ui_dispatch_view = search
-search = | savedsearch Transform_FirewallEvents_to_Json\
+search = | savedsearch Transform_FirewallEvents_to_Json_02\
 \
 ``` To transform our multi-column dataset into a flat single-column table we use the following approach:\
     We need to expand each line by the number of contained objects. Using |stats is a stable way command for this purpose.\
@@ -36,7 +36,7 @@ search = | savedsearch Transform_FirewallEvents_to_Json\
 | fields - evtId, expander, src_node, dst_node, rel\
 ``` done. we now have an expanded, flatten nodes and rels dataset. ```\
 \
-``` use myLimit to create less object on the neo4j instance and have the command finish faster.```\
+``` use myLimit to create less objects on the neo4j instance and have the command finish faster.```\
 | streamstats count as evtId\
 | eval objsPerRow = 3\
 | eval myLimit = 100\
@@ -48,9 +48,9 @@ search = | savedsearch Transform_FirewallEvents_to_Json\
 | sort 0 obj_type\
 | fields json_obj\
 \
-``` | creategraphjson uri="somehost" account="someaccount" noact=f mode="merge" ```
+| creategraphjson uri="myuri" account="myaccount" noact=t mode="merge"
 
-[Transform_FirewallEvents_to_Json]
+[Transform_FirewallEvents_to_Json_02]
 action.email.show_password = 1
 action.email.useNSSubject = 1
 action.webhook.enable_allowlist = 0
@@ -98,15 +98,12 @@ search = | inputlookup graphee_demo_concepts_firewall_traffic.csv \
     The solution is to zip the fields of on object into a json blob and handle it in that form. We can use the awesome command |tojson (since v8.2.6) and |fromjson (since v9.0.0) Splunk introduced lately to achieve this easily. ``` \
 | eval obj_type = "node" \
 ``` transform src ``` \
-| tojson output_field=src_props src_ip, src_hostname \
-| tojson output_field=src_node obj_type, src_node_ref, src_node_label, src_props \
+| eval src_node = json_object( "obj_type", obj_type, "node_ref", src_node_ref, "node_label", src_node_label, "props", json_object( "ip", src_ip, "hostname", src_hostname ) )\
+\
 ``` transform dst ``` \
-| tojson output_field=dst_props dst_ip, dst_hostname, dst_port, dst_proto \
-| tojson output_field=dst_node obj_type, dst_node_ref, dst_node_label, dst_props \
+| eval dst_node = json_object( "obj_type", obj_type, "node_ref", dst_node_ref, "node_label", dst_node_label, "props", json_object( "ip", dst_ip, "hostname", dst_hostname, "dst_port", dst_port, "dst_proto", dst_proto  ) )\
+\
 ``` transform rel ``` \
-| tojson output_field=rel_props sum_conn_bytes, sum_conn_packets, count_conn \
-| eval rel_src_node = src_node_ref \
-| eval rel_dst_node = dst_node_ref \
 | eval obj_type = "rel" \
-| tojson output_field=rel obj_type, rel_ref, rel_type, rel_src_node, rel_dst_node, rel_props \
+| eval rel = json_object( "obj_type", obj_type, "rel_ref", rel_ref, "rel_type", rel_type, "rel_src_node", src_node_ref, "rel_dst_node", dst_node_ref, "props", json_object( "ip", dst_ip, "hostname", dst_hostname, "dst_port", dst_port, "dst_proto", dst_proto  ) )\
 | fields src_node, dst_node, rel
