--- a/graphee/default/commands.conf
+++ b/graphee/default/commands.conf
@@ -20,6 +20,17 @@ requires_preop = true
 run_in_preview = false
 maxwait = 600
 
+[creategraphbatchedjson]
+filename = creategraphbatchedjson.py
+chunked = true
+python.version = python3
+local = true
+streaming = false
+generating = false
+requires_preop = true
+run_in_preview = false
+maxwait = 600
+
 [getfullgraph]
 filename = getfullgraph.py
 chunked = true
