--- a/graphee/default/savedsearches.conf
+++ b/graphee/default/savedsearches.conf
@@ -66,7 +66,7 @@ display.visualizations.show = 0
 request.ui_dispatch_app = graphee
 request.ui_dispatch_view = search
 search = | getfullgraph uri=<my_uri_id> account=<my_account_id> noact=f\
-| table obj_type, node_id, node_labels, rel_id, rel_type, prop:*
+| table obj_type, node_id, node_labels, rel_id, rel_type, prop:* \
 | sort 0 obj_type, -node_label, rel_type
 
 [example_firewalltraffic_transformToJson_01]
